Fix the alignment of the navigation

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 .nav {
-  color: #005e76;
+  color: #0084a6;
   border: 2px solid #8bc9d9;
   border-top: 0;
   border-left: 0;
@@ -57,7 +57,7 @@ footer {
   font-family: "Noto Sans Japanese", sans-serif;
 }
 
-@media only screen and (min-width: 38em) {
+@media only screen and (min-width: 60em) {
 
   .navigation {
     text-align: right;
